# class2icalendar

./: .gitignore  README.md  class2icalendar.py  config_example.py  pyproject.toml  requirements.txt
